-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.10.0 Beta1
-
None
-
-
a810615dd (dev), 09e3043f6 (6.10), 4ee900a2a (6.9), 9434173c0 (tqtc/lts-6.8), 1c322a834 (dev), ca2708d82 (6.10), c3fedf130 (6.9), a02ba63d7 (tqtc/lts-6.8)
Launching the Document Viewer example prints some runtime warnings:
qt.svg: Cannot open file ':/demos/documentviewer/images/go-next.svgz', because: Die Datei oder das Verzeichnis konnte nicht gefunden werden qt.svg: Cannot open file ':/demos/documentviewer/images/go-previous.svgz', because: Die Datei oder das Verzeichnis konnte nicht gefunden werden qt.svg: Cannot open file ':/demos/documentviewer/images/document-open-recent.svgz', because: Die Datei oder das Verzeichnis konnte nicht gefunden werden
- is required for
-
QTBUG-137075 Make all Qt Application Examples warning free
-
- Open
-
For Gerrit Dashboard: QTBUG-138169 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
657968,2 | documentviewer demo: Fix resource warnings | dev | qt/qtdoc | Status: MERGED | +2 | 0 |
658091,2 | documentviewer demo: Fix resource warnings | 6.10 | qt/qtdoc | Status: MERGED | +2 | 0 |
658128,2 | documentviewer demo: Fix resource warnings | 6.9 | qt/qtdoc | Status: MERGED | +2 | 0 |
658226,2 | documentviewer demo: Fix resource warnings | tqtc/lts-6.8 | qt/tqtc-qtdoc | Status: MERGED | +2 | 0 |
658354,5 | documentviewer demo: Fix SVG warnings | dev | qt/qtdoc | Status: MERGED | +2 | 0 |
659115,2 | documentviewer demo: Fix SVG warnings | 6.10 | qt/qtdoc | Status: MERGED | +2 | 0 |
659367,2 | documentviewer demo: Fix SVG warnings | 6.9 | qt/qtdoc | Status: MERGED | +2 | 0 |
659519,2 | documentviewer demo: Fix SVG warnings | tqtc/lts-6.8 | qt/tqtc-qtdoc | Status: MERGED | +2 | 0 |