documentviewer demo: Fix SVG warnings

This patch replaces the SVG icons with Qt minimalistic icons and
resolves the warnings about the non-supported SVG properties.

Fixes: QTBUG-138169
Pick-to: 6.8
Change-Id: Ib290c15d1498945149ba4425062268619bfe2a33
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>
(cherry picked from commit 1c322a834c592b9aaa835e80b6ada5c2a594d1ef)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit ca2708d822869e9e52642967f56daf562fb6482a)